<package format="2">
<name>my_robot_odom</name>
<version>0.0.0</version>
<description>The my_robot_odom package</description>
<maintainer email="limhs@todo.todo">limhs</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<!--  런타임/빌드 공통 의존  -->
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>rospy</depend>
<depend>std_msgs</depend>
<depend>tf</depend>
<!--  서비스 생성을 위한 의존  -->
<build_depend>message_generation</build_depend>
<exec_depend>message_runtime</exec_depend>
<export/>
</package>
